Requests JWT authorization (#15)
* Doc: README.md update

* Changed: MQs connectivity config to access starfish and process queues

* Changed: starfish queue name to transfer queue

* Added: message data published into queue on ingest init and accessing actual queues for both publisher and listener components

* Changed: publisher renamed to match actual queue

* Added: transfer status queue listener and general refactor of stomp related modules

* Added: updated listener tests

* Refactor: stomp components tests and missing ABC inheritance added

* Changed: renamed ingest status listener to process status listener

* Added: process ready queue publisher and queue variables renaming

* Added: ingest service MQs interaction and persistence logics

* Added: listeners interaction logic with ingest service

* Fixed: tests location

* Added: development dims container logs mapping

* Added: request body transform to ingest post controller

* Added: missing response params for success/failure responses

* Doc: updated OpenAPI spec file

* Changed: request validation based on OpenAPI spec

* Fixed: missing dummy params added to ingest repository impl

* Removed: depositing application from ingest request params

* Removed: unused test resource

* Removed: package id from error response body

* Added: empty object_urn to ingest response

* Stash: JWT decoder WIP

* Changed: using correct error response body for bad requests

* Changed: response error package name

* Added: JWT decoder

* Stash: auth middleware WIP

* Added: basic auth middleware with logging

* Added: jwt body hash validation in authorization middleware

* Added: jwt headers validation to authorization middleware

* Changed: JWT header and body values

* Added: authorization middleware JSON responses

* Added: JSON Canonicalization for request body hashing

* Added: application tests

* Refactor: tests naming

* Added: Unauthorized resp
